--- a/Xamarin.Forms.Controls/GalleryPages/CollectionViewGalleries/GroupingGalleries/SomeEmptyGroups.xaml
+++ b/Xamarin.Forms.Controls/GalleryPages/CollectionViewGalleries/GroupingGalleries/SomeEmptyGroups.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Xamarin.Forms.Controls.GalleryPages.CollectionViewGalleries.GroupingGalleries.SomeEmptyGroups">
     <ContentPage.Content>
-		<CollectionView x:Name="CollectionView" ItemsLayout="ListItemsLayout.VerticalList">
+		<CollectionView x:Name="CollectionView" ItemsLayout="ListItemsLayout.VerticalList" ItemSizingStrategy="MeasureFirstItem">
 
 			<CollectionView.ItemTemplate>
 				<DataTemplate>
