--- a/Xamarin.Forms.Controls/GalleryPages/CollectionViewGalleries/GroupingGalleries/SwitchGrouping.xaml
+++ b/Xamarin.Forms.Controls/GalleryPages/CollectionViewGalleries/GroupingGalleries/SwitchGrouping.xaml
@@ -29,7 +29,7 @@
 				<CollectionView.GroupFooterTemplate>
 					<DataTemplate>
 						<StackLayout>
-							<Label Text="{Binding Count, StringFormat='Total members: {0:D}'}" BackgroundColor="Orange" 
+							<Label Text="{Binding Count, StringFormat='{}Total members: {0:D}'}" BackgroundColor="Orange" 
 								   Margin="0,0,0,15"/>
 						</StackLayout>
 					</DataTemplate>
