--- a/Xamarin.Forms.Controls/GalleryPages/CollectionViewGalleries/GroupingGalleries/GroupingPlusSelection.xaml
+++ b/Xamarin.Forms.Controls/GalleryPages/CollectionViewGalleries/GroupingGalleries/GroupingPlusSelection.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Xamarin.Forms.Controls.GalleryPages.CollectionViewGalleries.GroupingGalleries.GroupingPlusSelection">
     <ContentPage.Content>
-         <CollectionView x:Name="CollectionView" ItemsLayout="ListItemsLayout.VerticalList" IsGroupingEnabled="True" 
+         <CollectionView x:Name="CollectionView" IsGroupingEnabled="True" 
 						 SelectionMode="Single">
 
 			<CollectionView.ItemTemplate>
